# TAPAS

./: CODE_OF_CONDUCT.md  CONTRIBUTING.rst  README.md  README.rst  ROADMAP.rst  SECURITY.md  SECURITY.rst  launch_TAPAS.py  launch_tapas.py  pyproject.toml  readthedocs.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bundle_and_release.yaml  codeql-analysis.yml  publish_pypi.yml
assets/: icon.icns
docs/: conf.py  index.rst
docs/_static/: HDF_screenshot.tif  custom.css
docs/getting_started/: concept.rst  index.rst  installation.rst  project_structure.rst  software_architecture.rst
docs/tutorial/: import.rst  index.rst  new_model.rst
docs/using_tapas/: combine_projects.rst  component.rst  global_fit.rst  import.rst  index.rst  local_fit.rst  main_window.rst  preprocessing.rst  visualization.rst
src/TAPAS/: __init__.py  app.py
src/TAPAS/configurations/: messages.py
src/TAPAS/views/: main_window.py
src/TAPAS/views/tabwidgets/: global_fit_tabwidgets.py
src/tapas/views/tabs/: global_fit_tab.py
