[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name            = "tapas-gui"
version         = "1.0.1"
description     = "Transient Absorption Processing & Analysis Software"
readme          = "README.md"
requires-python = ">=3.11, <3.12"
license         = {file = "LICENSE.txt"}
authors         = [{name = "Philipp Frech"}]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", 
  "Operating System :: OS Independent",
]


dependencies = [
  "arviz>=0.21.0",
  "corner>=2.2.3",
  "emcee>=3.1.6",
  "h5py>=3.13.0",
  "jax>=0.5.3",
  "lmfit>=1.3.3",
  "matplotlib>=3.10",
  "numpy>=2.2.4",
  "pyqt6>=6.9",
  "pyqtconfig>=0.9.2",
  "scipy>=1.15.2",
]



[project.optional-dependencies]
dev    = ["build>=1.2.2"]
bundle = ["pyinstaller>=6.13"]


[project.scripts]
tapas = "TAPAS.app:run"

[tool.setuptools]
license-files = ["LICENSE.txt", "THIRD-PARTY_LICENSES.txt"]


[tool.setuptools.package-data]
TAPAS = [
  "assets/**/*",
  "configurations/**/*",
  "log/**/*",
  "LICENSE.txt",
  "THIRD-PARTY_LICENSES.txt",
  "THIRD-PARTY_ACKNOWLEDGEMENTS.txt",
]


[tool.setuptools.packages.find]
where = ["src"]

